[package]
name = "notry"
version = "0.1.0"
edition = "2021"
authors= ["Joseph Bonneau","Faxing Wang","Riad S. Wahby"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "3.0", features = ["serde"] }
hkdf= "0.12"
itertools = "0.10.1"
rand = "0.7.3"
rand_core = { version = "0.5", default-features = false }
our_serde = { package = "serde", version = "1", default-features = false, optional = true, features = ["derive"] }
zeroize = { version = "=1.3", default-features = false, features = ["zeroize_derive"] }
sha2 = "0.10.2"
subtle = { version = "^2.2.1", default-features = false }
hex-literal = "0.2.2"
aes-gcm = "0.10.1"
[dependencies.x25519-dalek]
version = "1"